# things

./: .gitignore  README.md  __main__.py
api/: Cargo.toml
api/src/: lib.rs
app/: package.json
functions/: main.py  requirements.txt
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  utils.py
pulumi/functions/: main.py
server/: Cargo.toml
server/src/: id.rs  lib.rs  lists.rs
