[package]
name = "things-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4"
schemars = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.25"
tokio = { version = "1.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[features]
