[package]
name = "things-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
axum = "0.4"
chrono = { version = "0.4.19", features = ["serde"] }
schemars = { version = "0.8.8", features = ["derive", "chrono"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = { version = "1.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[features]

[dev-dependencies]
serde_test = "1.0.132"
